Added metallb yaml & notes and modified the prometheus deployment

--- a/prometheus-charts/prometheus-deployment.yaml
+++ b/prometheus-charts/prometheus-deployment.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: prometheus-server
+      app: prometheus
   template:
     metadata:
       labels:
-        app: prometheus-server
+        app: prometheus
     spec:
       containers:
         - name: prometheus
@@ -32,7 +32,7 @@ spec:
         - name: prometheus-config-volume
           configMap:
             defaultMode: 420
-            name: prometheus-server-conf
+            name: prometheus-conf
   
         - name: prometheus-storage-volume
           emptyDir: {}
